<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/config_ll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:minWidth="280dip"
    android:background="@null"
    >
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="@dimen/head_height"
        android:background="@color/blue"
        android:padding="5dp"
        >
        <Button
	        android:id="@+id/back_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:background="@drawable/com_btn"
	        android:text="@string/go_back"
	        android:textColor="@color/t_bg1"
	        android:textSize="@dimen/experts_list_title_text_size" />
        <TextView
	        android:id="@+id/set_tv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:text="@string/str_setting"
	        android:textColor="@android:color/white"
	        android:textSize="@dimen/experts_list_title_text_size" />
        
        <Button
	        android:id="@+id/save_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerInParent="true"
	        android:background="@drawable/com_btn"
	        android:text="@string/save"
	        android:textColor="@color/t_bg1"
	        android:textSize="@dimen/experts_list_title_text_size" />
    </RelativeLayout>
    
</LinearLayout>