<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"    >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/head_height"
        android:background="@color/blue"
        android:padding="5dp" >

        <!-- <TextView
            android:id="@+id/experts_list_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/experts_list"
            android:textColor="@android:color/white"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/experts_list_title_text_size" /> -->
		<Button
            android:id="@+id/btn_back"
            style="@style/common_header_left_btn_style"
            android:background="@drawable/btn_return_white_selector" />
        <TextView
            android:id="@+id/experts_detail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/experts_detail"
            android:textColor="@android:color/white"
            android:textSize="@dimen/experts_list_title_text_size" />

    </RelativeLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dp"
        android:orientation="vertical">
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <RelativeLayout
		        android:layout_width="100dp"
		        android:layout_height="140dp"
		        android:layout_marginRight="5dp"
		        >
		        <ImageView
		            android:id="@+id/experts_img"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:scaleType="fitXY"
		            android:src="@drawable/default_avatar" />
		
		        <ImageView
		            android:id="@+id/experts_img1"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:scaleType="fitXY"
		            android:src="@drawable/default_avatar1" />
		    </RelativeLayout>
		    <RelativeLayout 
		        android:layout_width="fill_parent"
		        android:layout_height="140dp"
		        >
		        <LinearLayout 
		            android:id="@+id/name_ll"
			      	android:layout_width="fill_parent"
			      	android:layout_height="wrap_content"
			      	android:orientation="horizontal">
			         <TextView 
			             android:id="@+id/experts_name"
			             android:layout_width="wrap_content"
			             android:layout_height="wrap_content"
			             android:textSize="@dimen/experts_detail_text_size"
			             android:textColor="@android:color/black"
			             android:text="@string/name"/>
			         <TextView 
			             android:id="@+id/experts_name_tv"
			             android:layout_width="fill_parent"
			             android:layout_height="wrap_content"
			             android:textColor="@android:color/black"
			             android:textSize="@dimen/experts_detail_text_size"
			             />
		        </LinearLayout>
		        <LinearLayout 
		          android:id="@+id/sex_ll"
			      android:layout_width="fill_parent"
			      android:layout_height="wrap_content"
			      android:layout_marginTop="10dp"
			      android:layout_below="@id/name_ll"
			      android:orientation="horizontal">
			         <TextView 
			             android:id="@+id/experts_sex"
			             android:layout_width="wrap_content"
			             android:layout_height="wrap_content"
			             android:textColor="@android:color/black"
			             android:textSize="@dimen/experts_detail_text_size"
			             android:text="@string/sex"/>
			         <TextView 
			             android:id="@+id/experts_sex_tv"
			             android:layout_width="fill_parent"
			             android:layout_height="wrap_content"
			             android:textColor="@android:color/black"
			             android:textSize="@dimen/experts_detail_text_size"
			             />
		        </LinearLayout>
		        <LinearLayout 
		            android:id="@+id/online_ll"
			      	android:layout_width="fill_parent"
			      	android:layout_height="wrap_content"
			      	android:layout_marginTop="10dp"
			      	android:layout_below="@id/sex_ll"
			      	android:orientation="horizontal">
			         <TextView 
			             android:id="@+id/experts_online"
			             android:layout_width="wrap_content"
			             android:layout_height="wrap_content"
			             android:textColor="@android:color/black"
			             android:textSize="@dimen/experts_detail_text_size"
			             android:text="@string/online_state"/>
			         <TextView 
			             android:id="@+id/experts_online_tv"
			             android:layout_width="fill_parent"
			             android:layout_height="wrap_content"
			             android:textColor="@android:color/black"
			             android:textSize="@dimen/experts_detail_text_size"
			             />
		        </LinearLayout>
		        <LinearLayout 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:orientation="horizontal"
			        android:layout_below="@id/online_ll"
			        android:layout_alignParentRight="true"
			        android:layout_marginTop="10dp"
			        >
			        <Button
			            android:id="@+id/appointment_btn"
			            android:layout_width="70dp"
			            android:layout_height="40dp"
			            android:text="@string/appointment"
			            android:textSize="@dimen/experts_detail_text_size"
			            android:textColor="@android:color/white"
			            android:layout_gravity="center_vertical"
			            android:background="@drawable/btn_login"
			            />
			        <Button
			            android:id="@+id/phone_btn"
			            android:layout_width="70dp"
			            android:layout_height="40dp"
			            android:layout_marginLeft="10dp"
			            android:text="@string/phone"
			            android:textSize="@dimen/experts_detail_text_size"
			            android:textColor="@android:color/white"
			            android:layout_gravity="center_vertical"
			            android:background="@drawable/btn_login"
			            />
				</LinearLayout>
		    </RelativeLayout>
	    </LinearLayout>
		<LinearLayout 
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:layout_marginTop="10dp"
	      android:orientation="horizontal">
	      <TextView 
	          android:id="@+id/experts_unit"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:textColor="@android:color/black"
	          android:textSize="@dimen/experts_detail_text_size"
	          android:text="@string/unit"/>
	      <TextView 
	          android:id="@+id/experts_unit_tv"
	          android:layout_width="fill_parent"
	          android:layout_height="wrap_content"
	          android:textColor="@android:color/black"
	          android:maxLines="2"
	          android:ellipsize="end"
	          android:textSize="@dimen/experts_detail_text_size"
	          />
	    </LinearLayout>
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:orientation="horizontal">
	       <TextView 
	           android:id="@+id/experts_description"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:textSize="@dimen/experts_detail_text_size"
	           android:textColor="@android:color/black"
	           android:text="@string/description"/>
	       <TextView 
	           android:id="@+id/experts_description_tv"
	           android:layout_width="fill_parent"
	           android:layout_height="wrap_content"
	           android:textSize="@dimen/experts_detail_text_size"
	           android:textColor="@android:color/black"
	           />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>