<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    >
    <LinearLayout 
        android:id="@+id/detail_ll"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:orientation="horizontal">
	    <RelativeLayout
	      	android:layout_width="85dp"
	      	android:layout_height="116dp"
	     	android:layout_marginRight="5dp"
	      	>
	      	<ImageView
	          	android:id="@+id/experts_img"
	          	android:layout_width="85dp"
	          	android:layout_height="116dp"
	          	android:scaleType="fitXY"
	          	android:src="@drawable/default_avatar" />
	
	      	<ImageView
	          	android:id="@+id/experts_img1"
	          	android:layout_width="85dp"
	          	android:layout_height="116dp"
	          	android:scaleType="fitXY"
	          	android:src="@drawable/default_avatar1" />
	  	</RelativeLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        <LinearLayout 
	       		android:layout_width="fill_parent"
	       		android:layout_height="wrap_content"
	       		android:orientation="horizontal">
	          	<TextView 
	              android:id="@+id/experts_name"
	              android:layout_width="wrap_content"
	              android:layout_height="wrap_content"
	              android:textSize="@dimen/experts_items_text_size"
	              android:textColor="@android:color/black"
	              android:text="@string/name"/>
	          <TextView 
	              android:id="@+id/experts_name_tv"
	              android:layout_width="fill_parent"
	              android:layout_height="wrap_content"
	              android:textColor="@android:color/black"
	              android:textSize="@dimen/experts_items_text_size"
	              />
	         </LinearLayout>
	         <LinearLayout 
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:layout_marginTop="3dp"
		       android:orientation="horizontal">
	          <TextView 
	              android:id="@+id/experts_sex"
	              android:layout_width="wrap_content"
	              android:layout_height="wrap_content"
	              android:textColor="@android:color/black"
	              android:textSize="@dimen/experts_items_text_size"
	              android:text="@string/sex"/>
	          <TextView 
	              android:id="@+id/experts_sex_tv"
	              android:layout_width="fill_parent"
	              android:layout_height="wrap_content"
	              android:textColor="@android:color/black"
	              android:textSize="@dimen/experts_items_text_size"
	              />
	         </LinearLayout>
	         <LinearLayout 
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:layout_marginTop="3dp"
		       android:orientation="horizontal">
	          <TextView 
	              android:id="@+id/experts_unit"
	              android:layout_width="wrap_content"
	              android:layout_height="wrap_content"
	              android:textColor="@android:color/black"
	              android:textSize="@dimen/experts_items_text_size"
	              android:text="@string/unit"/>
	          <TextView 
	              android:id="@+id/experts_unit_tv"
	              android:layout_width="fill_parent"
	              android:layout_height="wrap_content"
	              android:textColor="@android:color/black"
	              android:maxLines="2"
	              android:ellipsize="end"
	              android:textSize="@dimen/experts_items_text_size"
	              />
	         </LinearLayout>
	         <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="3dp"
			    android:orientation="horizontal">
			       <TextView 
			           android:id="@+id/experts_description"
			           android:layout_width="wrap_content"
			           android:layout_height="wrap_content"
			           android:textSize="@dimen/experts_items_text_size"
			           android:textColor="@android:color/black"
			           android:text="@string/description"/>
			       <TextView 
			           android:id="@+id/experts_description_tv"
			           android:layout_width="fill_parent"
			           android:layout_height="wrap_content"
			           android:textSize="@dimen/experts_items_text_size"
			           android:textColor="@android:color/black"
			           android:maxLines="2"
			           android:ellipsize="end"
			           />
			</LinearLayout>
	 	</LinearLayout>
 	</LinearLayout>
 	<View android:layout_width="0.5dp"
 	    android:layout_height="100dp"
 	    android:layout_marginTop="8dp"
 	    android:layout_marginLeft="8dp"
 	    android:layout_marginRight="8dp"
 	    android:background="@android:color/darker_gray"/>
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
     <Button
         android:id="@+id/appointment_btn"
         android:layout_width="70dp"
         android:layout_height="50dp"
         android:text="@string/appointment"
         android:textSize="18sp"
         android:textColor="@android:color/white"
         android:layout_gravity="center_vertical"
         android:background="@drawable/btn_login"
         />
     <Button
         android:id="@+id/phone_btn"
         android:layout_width="70dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
         android:text="@string/phone"
         android:textSize="18sp"
         android:textColor="@android:color/white"
         android:layout_gravity="center_vertical"
         android:background="@drawable/btn_login"
         />
		     <!-- <Button
		 android:id="@+id/jianjie_btn"
		 android:layout_width="70dp"
		 android:layout_height="30dp"
		 android:layout_marginTop="10dp"
		 android:text="@string/jianjie"
		 android:textSize="18sp"
		 android:textColor="@android:color/white"
		 android:layout_gravity="center_vertical"
		 android:background="@drawable/btn_login"
		 /> -->
	</LinearLayout>
</LinearLayout>