<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg" >

    <LinearLayout
        android:id="@+id/below_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/head_height"
            android:background="@color/blue"
            android:padding="5dp" >

            <TextView
                android:id="@+id/experts_list_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/experts_list"
                android:textColor="@android:color/white"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/experts_list_title_text_size" />

            <TextView
                android:id="@+id/experts_count_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/experts_count"
                android:textColor="@android:color/white"
                android:textSize="@dimen/experts_list_title_text_size" />

            <ImageButton
                android:id="@+id/set_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_set"
                android:layout_marginRight="10dp"
                />
        </RelativeLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <LinearLayout
                android:id="@+id/ll_tab_fragment_container"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#ffffff"
                android:orientation="vertical">
                <ListView 
                    android:id="@+id/agriculture_experts_lv"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    ></ListView>
                <ListView 
                    android:id="@+id/ranching_experts_lv"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:visibility="gone"
                    ></ListView>
                <ListView 
                    android:id="@+id/forestry_experts_lv"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:visibility="gone"
                    ></ListView>
			</LinearLayout>
            <!-- <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/footer_shadow" />
            </RelativeLayout> -->
        </FrameLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_tab_agriculture"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" 
                android:gravity="center"
                android:text="@string/agriculture"
                android:textColor="@color/common_text_color_selector"
                android:textSize="16dp" />
			<View
	            android:layout_width="0.5dp"
	            android:layout_height="fill_parent"
	            android:background="@android:color/darker_gray"/>
			<TextView
                android:id="@+id/tv_tab_ranching"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ranching"
                android:textColor="@color/common_text_color_selector"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>